Update OrderHistory
