# handler/admin_function/feedback/admin_handler_view_feedback.go
@@ -1,0 +1,49 @@
+package feedback
+
+import (
+	"github.com/MinhSang97/order_app/payload"
+	"github.com/MinhSang97/order_app/usecases"
+	"github.com/MinhSang97/order_app/usecases/res"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+// AdminFeedbackView godoc
+// @Summary AdminFeedbackView
+// @Description AdminFeedbackView
+// @Tags AdminFeedback
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} res.Response
+// @Failure 400 {object} res.Response
+// @Failure 403 {object} res.Response
+// @Failure 500 {object} res.Response
+// @Router /v1/api/admin/feedback_view [get]
+func AdminFeedbackView() func(*gin.Context) {
+	return func(c *gin.Context) {
+
+		var Data = payload.FeedbackPayload{}
+
+		if err := c.ShouldBind(&Data); err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+
+		uc := usecases.NewAdminFunctionUseCase()
+		feedbackAll, err := uc.GetFeedbackAll(c.Request.Context())
+		if err != nil {
+			c.JSON(http.StatusInternalServerError, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+
+		c.JSON(http.StatusOK, res.Response{
+			StatusCode: http.StatusOK,
+			Message:    "Xử lý thành công",
+			Data:       feedbackAll,
+		})
+	}
+}
