# handler/users_function/user_handler_add_feedback.go
@@ -1,0 +1,81 @@
+package handler
+
+import (
+	"github.com/MinhSang97/order_app/usecases"
+	"github.com/MinhSang97/order_app/usecases/dto"
+	"github.com/MinhSang97/order_app/usecases/req"
+	"github.com/MinhSang97/order_app/usecases/res"
+	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
+	"net/http"
+)
+
+// UsersFeedback godoc
+// @Summary UsersFeedback
+// @Description UsersFeedback
+// @Tags usersFeedback
+// @Accept  json
+// @Produce  json
+// @Param user_id path string true "User ID"
+// @Param order_id body int true "OrderID"
+// @Param rating body int true "Rating"
+// @Param comment body string true "Comment"
+// @Success 200 {object} res.Response
+// @Failure 400 {object} res.Response
+// @Failure 403 {object} res.Response
+// @Failure 500 {object} res.Response
+// @Router /v1/api/users/feedback{user_id} [post]
+func UsersFeedback() func(*gin.Context) {
+	return func(c *gin.Context) {
+		user_id := c.Param("user_id")
+		if user_id == "" || user_id == ":user_id" {
+			c.JSON(http.StatusBadRequest, gin.H{
+				"error": "không tìm thấy user_id",
+			})
+			return
+		}
+
+		var validate *validator.Validate
+		validate = validator.New(validator.WithRequiredStructEnabled())
+		req := req.ReqFeedback{}
+		if err := c.ShouldBindJSON(&req); err != nil {
+			c.JSON(http.StatusBadRequest, res.Response{
+				StatusCode: http.StatusBadRequest,
+				Message:    err.Error(),
+				Data:       nil,
+			})
+			return
+		}
+
+		if err := validate.Struct(req); err != nil {
+			c.JSON(http.StatusForbidden, res.Response{
+				StatusCode: http.StatusForbidden,
+				Message:    err.Error(),
+				Data:       nil,
+			})
+			return
+		}
+
+		feedback := dto.FeedbackDto{
+			OrderID: req.OrderID,
+			Rating:  req.Rating,
+			Comment: req.Comment,
+		}
+		data := feedback.ToPayload().ToModel()
+		uc := usecases.NewUsersUseCase()
+		err := uc.AddFeedbackUsersFeedback(c.Request.Context(), user_id, data)
+		if err != nil {
+			c.JSON(http.StatusConflict, res.Response{
+				StatusCode: http.StatusConflict,
+				Message:    err.Error(),
+				Data:       nil,
+			})
+			return
+		}
+		c.JSON(http.StatusOK, res.Response{
+			StatusCode: http.StatusOK,
+			Message:    "Xử lý thành công",
+			Data:       "Thêm feedback thành công",
+		})
+	}
+}
